avoid showing invisible text on loading

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
         url("./assets/fonts/roboto-bold-webfont.woff") format("woff");
     font-weight: normal;
     font-style: normal;
+    font-display: swap; /* avoid showing invisible text while fonts loads  */
 }
 
 @font-face {
@@ -16,6 +17,7 @@
         url("./assets/fonts/roboto-regular-webfont.woff") format("woff");
     font-weight: normal;
     font-style: normal;
+    font-display: swap; /* avoid showing invisible text while fonts loads  */
 }
 
 :root {
